# web_hw_9

./: README.md  main.py  models.py  parser.py  pyproject.toml  requirements.txt  seed.py
add/: authors.json  main.py
data/: authors.json  qoutes.json
