[tool.poetry]
name = "web-hw-9"
version = "0.1.0"
description = ""
authors = ["FitisovArtem <109963097+FitisovArtem@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.3"
sqlalchemy = "^2.0.23"
mongoengine = "^0.27.0"
scrapy = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
